--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "^1.19.4",
+    "whatsapp-web.js": "1.16.6",  
     "qrcode-terminal": "^0.12.0",
-    "puppeteer": "^21.3.8"
+    "puppeteer": "13.5.2"  
   },
   "devDependencies": {},
   "author": "Salvador",
