--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "whatsapp-web.js": "1.16.6",  
+    "whatsapp-web.js": "^1.23.0",
     "qrcode-terminal": "^0.12.0",
+    "readline-sync": "^1.4.10",
+    "chalk": "^4.1.2"
   },
-  "devDependencies": {},
-  "author": "Salvador",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "author": "SalvadorXploitiji",
   "license": "MIT"
 }
