--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "workspace",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
+  "name": "salxvron",
+  "version": "6.1.0",
+  "description": "SALXVRON - Cyber Security Tools (SQLi Scanner & DDoS via Proxy)",
+  "main": "salxvron.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node salxvron.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.8.4",
-    "chalk": "^4.1.2",
-    "figlet": "^1.8.0",
-    "gradient-string": "^3.0.0",
+    "axios": "^1.6.2",
+    "chalk": "^5.2.0",
+    "figlet": "^1.5.2",
+    "gradient-string": "^2.0.1",
     "moment": "^2.30.1",
-    "ora": "^8.2.0",
+    "ora": "^6.1.2",
     "random-useragent": "^0.5.0",
-    "tunnel": "^0.0.6"
-  }
+    "https-proxy-agent": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "author": "SalvadorXploitiji",
+  "license": "MIT"
 }
